tests/ui/variant_with_conflicting_field.stderr
error: `default` and `with` are mutually exclusive on a field
 --> tests/ui/variant_with_conflicting_field.rs:9:5
  |
9 |     #[quickcheck(default, with = "x")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
